Fix right white space

--- a/css/style.css
+++ b/css/style.css
@@ -198,7 +198,6 @@ footer .nav-o a {
   }
 }
 
-.row {
-  margin-right: 0px !important;
-  margin-left: 0px !important;
+.container-fluid, html {
+  overflow-x:hidden;
 }
